--- a/index.html
+++ b/index.html
@@ -10,24 +10,28 @@
 </head>
 <body>
 
-  <!-- banner image -->
+
    
   <!-- text on banner -->
   <div class="hero-banner">
-    <img src="/components/tallow-hero-bg.jpeg" alt="Hero Background">
+    <img src="/components/tallow-hero-bg.jpeg" alt="Hero banner">
+    
+    <div class="white-logo-banner">
+      <img src="/components/logo-white-tallow.PNG" alt="Logo">
+    </div>
     <div class="hero-text">
       <h1>LANCASHIRE TALLOW 
         COOK SMARTER AND LIVE BETTER</h1>
       <p>Discover the Benefits of Cooking with Our Organic Tallow: Sourced from Pasture-Raised Beef, High Smoke Point for Versatile Cooking, and Packed with Health-Promoting Nutrients!</p>
       <div class="two-buttons">
-        <!-- Button One (already properly sized) -->
+        <!-- Button One  -->
         <div class="btn btn-one">
-          <span>BUTTON ONE</span>
+          <span>OUR LOCATION</span>
         </div>
         
-        <!-- Button Two wrapped in a container -->
+        <!-- Button Two  -->
         <div class="btn">
-          <button class="button-two">BUTTON TWO</button>
+          <button class="button-two">PRODUCTS</button>
         </div>
       </div>
     </div>
