1 on 3 cards on small screens

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-
-   
+<!-- banner section -->
+<section>
   <!-- text on banner -->
   <div class="hero-banner">
     <img src="/components/tallow-hero-bg.jpeg" alt="Hero banner">
@@ -35,8 +35,22 @@
         </div>
       </div>
     </div>
-
-
     </div>
+</section>
+
+<!-- 3 cards with benefits sections -->
+ <section>
+  <figure class="image-block">
+    <h1>ORGANIC TALLOW</h1>
+    <img src="/components/tallow-cubes.jpeg" alt="Tallow cubes">
+    <figcaption>
+      <h3>
+        More Info
+      </h3>
+      <p>The tallow comes from cattle raised on organic farms, where the animals are pasture-raised, fed 100% organic feed (free from synthetic pesticides, herbicides, and GMOs), and not treated with antibiotics or hormones.</p>
+    </figcaption>
+  </figure>  
+
+</section>
 </body>
 </html>
