--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
       <p>The tallow comes from cattle raised on organic farms, where the animals are pasture-raised, fed 100% organic feed (free from synthetic pesticides, herbicides, and GMOs), and not treated with antibiotics or hormones.</p>
     </figcaption>
   </figure>  
+  <figure class="image-block">
+    <h1>PASTURASED BEEF</h1>
+    <img src="/components/pastured-rasied-beef.jpeg" alt="Tallow cubes">
+    <figcaption>
+      <h3>
+        More Info
+      </h3>
+      <p>Raised Naturally, Nourished Sustainably. Our cattle graze on local open pastures, ensuring the highest quality, nutrient-rich beef for your table. Taste the difference of truly ethical and wholesome farming on your table!</p>
+    </figcaption>
+  </figure>  
 
 </section>
 </body>
