finished cards on mobiles

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
 <!-- 3 cards with benefits sections -->
  <section>
+  <div class="figure-title-">
+    <h2>Our Tallow is full organic, from pasturased beef, with high smoke point, and benficial for health.</h2></div>
   <figure class="image-block">
     <h1>ORGANIC TALLOW</h1>
     <img src="/components/tallow-cubes.jpeg" alt="Tallow cubes">
@@ -52,12 +54,22 @@
   </figure>  
   <figure class="image-block">
     <h1>PASTURASED BEEF</h1>
-    <img src="/components/pastured-rasied-beef.jpeg" alt="Tallow cubes">
+    <img src="/components/pastured-rasied-beef.jpeg" alt="Pastured Rasied Beef">
     <figcaption>
       <h3>
         More Info
       </h3>
       <p>Raised Naturally, Nourished Sustainably. Our cattle graze on local open pastures, ensuring the highest quality, nutrient-rich beef for your table. Taste the difference of truly ethical and wholesome farming on your table!</p>
+    </figcaption>
+  </figure>  
+  <figure class="image-block">
+    <h1>HIGH SMOKE POINT</h1>
+    <img src="/components/high-smoke-point.jpeg" alt="High Smoke Point">
+    <figcaption>
+      <h3>
+        More Info
+      </h3>
+      <p>Perfect for All Your Cooking Needs! Our tallow handles high heat like a professional, making it ideal for frying, searing, roasting, baking and more—without breaking down or losing its nutritional benefits and without smoked kitchen.</p>
     </figcaption>
   </figure>  
 
