banner 2 started for mobile

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
       <p>Perfect for All Your Cooking Needs! Our tallow handles high heat like a professional, making it ideal for frying, searing, roasting, baking and more—without breaking down or losing its nutritional benefits and without smoked kitchen.</p>
     </figcaption>
   </figure>  
+</section>
+
+<!-- banner 2 -->
+<section>
 
 </section>
 </body>
