cards for smaller screen

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
 
 <!-- 3 cards with benefits sections -->
  <section>
-  <div class="figure-title-">
-    <h2>Our Tallow is full organic, from pasturased beef, with high smoke point, and benficial for health.</h2></div>
+  <div class="figures-positioning">
+  <div class="figure-title">
+    <h2>Our Tallow is full organic, from pastured beef, with high smoke point, and benficial for health.</h2></div>
+    <div class="figure-1">
   <figure class="image-block">
     <h1>ORGANIC TALLOW</h1>
     <img src="/components/tallow-cubes.jpeg" alt="Tallow cubes">
@@ -52,6 +54,8 @@
       <p>The tallow comes from cattle raised on organic farms, where the animals are pasture-raised, fed 100% organic feed (free from synthetic pesticides, herbicides, and GMOs), and not treated with antibiotics or hormones.</p>
     </figcaption>
   </figure>  
+</div>
+<div class="figure-2">
   <figure class="image-block">
     <h1>PASTURASED BEEF</h1>
     <img src="/components/pastured-rasied-beef.jpeg" alt="Pastured Rasied Beef">
@@ -62,6 +66,8 @@
       <p>Raised Naturally, Nourished Sustainably. Our cattle graze on local open pastures, ensuring the highest quality, nutrient-rich beef for your table. Taste the difference of truly ethical and wholesome farming on your table!</p>
     </figcaption>
   </figure>  
+</div>
+<div class="figure-3"> 
   <figure class="image-block">
     <h1>HIGH SMOKE POINT</h1>
     <img src="/components/high-smoke-point.jpeg" alt="High Smoke Point">
@@ -72,6 +78,8 @@
       <p>Perfect for All Your Cooking Needs! Our tallow handles high heat like a professional, making it ideal for frying, searing, roasting, baking and more—without breaking down or losing its nutritional benefits and without smoked kitchen.</p>
     </figcaption>
   </figure>  
+</div>
+</div>
 </section>
 
 <!-- banner 2 -->
