--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
 
 <!-- banner 2 -->
 <section>
-
+  <div class="hero-banner">
+    <img src="/components/girl-in-shop.jpg" alt="Girl in the shop">
+    <div class="hero-text">
+      <h1>THE BEST TALLOW SHOP</h1>
+        </div>
+        </div>
 </section>
 </body>
 </html>
