--- a/index.html
+++ b/index.html
@@ -122,5 +122,51 @@
 </div>
   
 </section>
+
+<section>
+  <footer>
+    <div class="footer-container">
+        <div class="footer-section">
+            <h3>OPENING HOURS</h3>
+            <p><span>MONDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>TUESDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>WEDNESDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>THURSDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>FRIDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>SATURDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>SUNDAY</span> <span>10:00 - 16:00</span></p>
+        </div>
+
+        <div class="footer-section">
+            <h3>LOCATION</h3>
+            <p> 944 Glenholme Court<br> Tiffin, OH 44883</p>
+        </div>
+
+        <div class="footer-section">
+            <h3>MENU</h3>
+            <p><a href="#">Home</a></p>
+            <p><a href="#">About</a></p>
+            <p><a href="#">Products</a></p>
+            <p><a href="#">Contact</a></p>
+        </div>
+
+        <div class="footer-section">
+            <h3>CONTACT</h3>
+            <p><strong>PHONE:</strong> 01257 271917</p>
+            <p><strong>E-MAIL:</strong> <a href="mailto:tallowlancashire">tallow@gmail.com</a></p>
+            <h3>ON SOCIAL MEDIA:</h3>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>© 2025 Tallow Lancashire Co</p>
+    </div>
+</footer>
+</section>
 </body>
 </html>
