--- a/index.html
+++ b/index.html
@@ -4,11 +4,61 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/pages/navbar.css">
   <link rel="stylesheet" href="/pages/fonts.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/pages/buttons.css">
+  <script src="/app.js"></script>
+
 </head>
 <body>
+  <header>
+    <header class="header" id="header">
+      <nav class="navbar container">
+        <a href="./index.html" class="brand">TALLOW LANCASHIRE CO</a>
+        <div class="menu" id="menu">
+          <ul class="menu-list">
+            <!-- <li class="menu-item">
+              <a href="#" class="menu-link is-active">
+                <i class="menu-icon ion-md-home"></i>
+                <span class="menu-name">Home</span>
+              </a>
+            </li> -->
+            <!-- <li class="menu-item">
+              <a href="#" class="menu-link is-active">
+                <i class="menu-icon ion-md-home"></i>
+                <span class="menu-name">Home</span>
+              </a>
+            </li> -->
+            <li class="menu-item">
+              <a href="#" class="menu-link is-active">
+                <i class="menu-icon ion-md-home"></i>
+                <span class="menu-name">Home</span>
+              </a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">
+                <i class="menu-icon ion-md-search"></i>
+                <span class="menu-name">About US</span>
+              </a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">
+                <i class="menu-icon ion-md-cart"></i>
+                <span class="menu-name">Products</span>
+              </a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">
+                <i class="menu-icon ion-md-heart"></i>
+                <span class="menu-name">Contact</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  </header>
 
 <!-- banner section -->
 <section>
