Navbar resposive and moving around pictures

--- a/index.html
+++ b/index.html
@@ -18,39 +18,28 @@
         <a href="./index.html" class="brand">TALLOW LANCASHIRE CO</a>
         <div class="menu" id="menu">
           <ul class="menu-list">
-            <!-- <li class="menu-item">
-              <a href="#" class="menu-link is-active">
-                <i class="menu-icon ion-md-home"></i>
-                <span class="menu-name">Home</span>
-              </a>
-            </li> -->
-            <!-- <li class="menu-item">
-              <a href="#" class="menu-link is-active">
-                <i class="menu-icon ion-md-home"></i>
-                <span class="menu-name">Home</span>
-              </a>
-            </li> -->
+
             <li class="menu-item">
               <a href="#" class="menu-link is-active">
-                <i class="menu-icon ion-md-home"></i>
+                <img src="/components/icones/home.png" alt="Home" class="menu-icon">
                 <span class="menu-name">Home</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
-                <i class="menu-icon ion-md-search"></i>
+                <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
                 <span class="menu-name">About US</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
-                <i class="menu-icon ion-md-cart"></i>
+                <img src="/components/icones/products.png" alt="ABOUT US" class="menu-icon">
                 <span class="menu-name">Products</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
-                <i class="menu-icon ion-md-heart"></i>
+                <img src="/components/icones/location.png" alt="ABOUT US" class="menu-icon">
                 <span class="menu-name">Contact</span>
               </a>
             </li>
@@ -64,10 +53,10 @@
 <section>
   <!-- text on banner -->
   <div class="hero-banner">
-    <img src="/components/tallow-hero-bg.jpeg" alt="Hero banner">
+    <img src="/components/photos/tallow-hero-bg.jpeg" alt="Hero banner">
     
     <div class="white-logo-banner">
-      <img src="/components/logo-white-tallow.PNG" alt="Logo">
+      <img src="/components/photos/logo-white-tallow.PNG" alt="Logo">
     </div>
     <div class="hero-text">
       <h1>LANCASHIRE TALLOW 
@@ -99,7 +88,7 @@
       <div class="figure-1">
         <figure class="image-block">
           <h1>ORGANIC TALLOW</h1>
-          <img src="/components/tallow-cubes.jpeg" alt="Tallow cubes">
+          <img src="/components/photos/tallow-cubes.jpeg" alt="Tallow cubes">
           <figcaption>
             <h3>More Info</h3>
             <p>The tallow comes from cattle raised on organic farms, where the animals are pasture-raised, fed 100% organic feed (free from synthetic pesticides, herbicides, and GMOs), and not treated with antibiotics or hormones. Taken from local farms!</p>
@@ -110,7 +99,7 @@
       <div class="figure-2">
         <figure class="image-block">
           <h1>PASTURASED BEEF</h1>
-          <img src="/components/pastured-rasied-beef.jpeg" alt="Pastured Rasied Beef">
+          <img src="./components/photos/pastured-rasied-beef.jpeg" alt="Pastured Rasied Beef">
           <figcaption>
             <h3>More Info</h3>
             <p>Raised Naturally, Nourished Sustainably. Our cattle graze on local open pastures, ensuring the highest quality, nutrient-rich beef for your table. Taste the difference of truly ethical and wholesome farming on your table!</p>
@@ -121,7 +110,7 @@
       <div class="figure-3"> 
         <figure class="image-block">
           <h1>HIGH SMOKE POINT</h1>
-          <img src="/components/high-smoke-point.jpeg" alt="High Smoke Point">
+          <img src="/components/photos/high-smoke-point.jpeg" alt="High Smoke Point">
           <figcaption>
             <h3>More Info</h3>
             <p>Perfect for All Your Cooking Needs! Our tallow handles high heat like a professional, making it ideal for frying, searing, roasting, baking and more—without breaking down or losing its nutritional benefits and without smoked kitchen.</p>
@@ -135,7 +124,7 @@
 <!-- banner 2 -->
 <section>
   <div class="hero-banner">
-    <img src="/components/girl-in-shop.jpg" alt="Girl in the shop">
+    <img src="/components/photos/girl-in-shop.jpg" alt="Girl in the shop">
     <div class="hero-text">
       <h1>THE BEST TALLOW SHOP</h1>
         </div>
@@ -153,7 +142,7 @@
             </div>
         </div>
         <div class="bedge-image-right">
-            <img src="/components/multiple-tallow-jars.jpeg" alt="Organic Tallow">
+            <img src="/components/photos/multiple-tallow-jars.jpeg" alt="Multiple Tallow Jars">
         </div>
     </div>
 
@@ -166,7 +155,7 @@
             </div>
         </div>
         <div class="bedge-image-left">
-            <img src="/components/queue-tallow-shp.JPG" alt="Health Promoting Nutrients">
+            <img src="/components/photos/queue-tallow-shp.JPG" alt="Health Promoting Nutrients">
         </div>
     </div>
 </div>
