logo and brand name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <header>
     <header class="header" id="header">
       <nav class="navbar container">
-        <a href="./index.html" class="brand">TALLOW LANCASHIRE CO</a>
+        <ul class="menu-list">
+        <div class="logo-black"> <img src="/components/photos/logo-white.png" alt="Logo Black" style="width: 60px; height: auto;"></div>
+        <a href="./index.html" class="brand"> TALLOW LANCASHIRE CO</a>
+      </ul>
         <div class="menu" id="menu">
           <ul class="menu-list">
 
@@ -91,7 +94,7 @@
           <img src="/components/photos/tallow-cubes.jpeg" alt="Tallow cubes">
           <figcaption>
             <h3>More Info</h3>
-            <p>The tallow comes from cattle raised on organic farms, where the animals are pasture-raised, fed 100% organic feed (free from synthetic pesticides, herbicides, and GMOs), and not treated with antibiotics or hormones. Taken from local farms!</p>
+            <p>The tallow comes from cattle raised on organic farms, where the animals are pasture-raised, fed 100% organic feed (free from synthetic pesticides, herbicides, and GMOs), and without antibiotics or hormones.</p>
           </figcaption>
         </figure>  
       </div>
@@ -113,7 +116,7 @@
           <img src="/components/photos/high-smoke-point.jpeg" alt="High Smoke Point">
           <figcaption>
             <h3>More Info</h3>
-            <p>Perfect for All Your Cooking Needs! Our tallow handles high heat like a professional, making it ideal for frying, searing, roasting, baking and more—without breaking down or losing its nutritional benefits and without smoked kitchen.</p>
+            <p> Our tallow handles high heat like a professional, making it ideal for frying, searing, roasting, baking and more—without breaking down or losing its nutritional benefits and without smoked kitchen.</p>
           </figcaption>
         </figure>  
       </div>
