css responsive changes

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
       <div class="two-buttons">
         <!-- Button One  -->
         <div class="btn btn-one">
-          <span><p>OUR LOCATION</p></span>
+          <span><h4>OUR LOCATION</h4></span>
         </div>
         
         <!-- Button Two  -->
         <div class="btn">
-          <button class="button-two"><p>PRODUCTS</p></button>
+          <button class="button-two"><h4>PRODUCTS</h4></button>
         </div>
       </div>
     </div>
@@ -105,7 +105,7 @@
           <img src="./components/photos/pastured-rasied-beef.jpeg" alt="Pastured Rasied Beef">
           <figcaption>
             <h3>More Info</h3>
-            <p>Raised Naturally, Nourished Sustainably. Our cattle graze on local open pastures, ensuring the highest quality, nutrient-rich beef for your table. Taste the difference of truly ethical and wholesome farming on your table!</p>
+            <p>Raised Naturally, Nourished Sustainably. Our cattle graze on local open pastures, ensuring the highest quality, nutrient-rich beef. Taste the difference of truly ethical and wholesome farming on your table!</p>
           </figcaption>
         </figure>  
       </div>
@@ -138,10 +138,11 @@
   <div class="bedge-section">
     <div class="bedge-right">
         <div class="bedge-text-right">
+          <h4>EXPLORE OUR STORE, FIND THE BEST COOKING TALLOW!</h4>
             <h1>CHECK OUT AVAILABLE PRODUCTS!</h1>
             <p>The tallow comes from cattle raised on organic farms, where the animals are pasture-raised, fed 100% organic feed (free from synthetic pesticides, herbicides, and GMOs), and not treated with antibiotics or hormones.</p>
             <div class="btn">
-              <button class="button-two"><p>PRODUCTS</p></button>
+              <button class="button-two"><h4>PRODUCTS</h4></button>
             </div>
         </div>
         <div class="bedge-image-right">
@@ -151,10 +152,11 @@
 
     <div class="bedge-left">
         <div class="bedge-text-left">
+            <h4>WE ARE OPEN EVERY SINGLE DAY</h4>
             <h1>WE OPEN THE DOORS EVERYDAY AT 9:00. COME SAY HELLO!</h1>
             <p>Our tallow is a rich source of essential fatty acids, fat-soluble vitamins, and antioxidants that are vital for optimal health.</p>
             <div class="btn">
-              <button class="button-two"><p>CONTACT</p></button>
+              <button class="button-two"><h4>CONTACT</h4></button>
             </div>
         </div>
         <div class="bedge-image-left">
@@ -181,8 +183,9 @@
 
         <div class="footer-section">
             <h3>LOCATION</h3>
-            <p> 944 Glenholme Court<br> Tiffin, OH 44883</p>
+            <p> 275 Eaves Ln<br> Chorley PR6 0EY</p>
         </div>
+
 
         <div class="footer-section">
             <h3>MENU</h3>
