--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <img src="./components/photos/pastured-rasied-beef.jpeg" alt="Pastured Rasied Beef">
           <figcaption>
             <h3>More Info</h3>
-            <p>Raised Naturally, Nourished Sustainably. Our cattle graze on local open pastures, ensuring the highest quality, nutrient-rich beef. Taste the difference of truly ethical and wholesome farming on your table!</p>
+            <p>Raised Naturally, Nourished Sustainably. Our cattle graze on local open pastures, ensuring the highest quality, nutrient-rich beef. Taste the difference of truly ethical and wholesome farming on your table with our tallow!</p>
           </figcaption>
         </figure>  
       </div>
