--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
             <li class="menu-item">
               <a href="#" class="menu-link is-active">
                 <img src="/components/icones/home.png" alt="Home" class="menu-icon">
-                <span class="menu-name">Home</span>
+                <span class="menu-name" style="font-size: 1.1rem;">Home</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
                 <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
-                <span class="menu-name">About US</span>
+                <span class="menu-name" style="font-size: 1.1rem;">About US</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
                 <img src="/components/icones/products.png" alt="ABOUT US" class="menu-icon">
-                <span class="menu-name">Products</span>
+                <span class="menu-name" style="font-size: 1.1rem;">Products</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
                 <img src="/components/icones/location.png" alt="ABOUT US" class="menu-icon">
-                <span class="menu-name">Contact</span>
+                <span class="menu-name" style="font-size: 1.1rem;">Contact</span>
               </a>
             </li>
           </ul>
@@ -106,7 +106,7 @@
           <img src="./components/photos/pastured-rasied-beef.jpeg" alt="Pastured Rasied Beef">
           <figcaption>
             <h3>More Info</h3>
-            <p>Raised Naturally, Nourished Sustainably. Our cattle graze on local open pastures, ensuring the highest quality, nutrient-rich beef. Taste the difference of truly ethical and wholesome farming on your table with our tallow!</p>
+            <p>Raised Naturally, Nourished Sustainably. Our cattle graze on local open pastures, ensuring the highest quality, nutrient-rich beef. Taste the difference of truly ethical and wholesome farming!</p>
           </figcaption>
         </figure>  
       </div>
@@ -193,9 +193,9 @@
             <br>
             <h3>ON SOCIAL MEDIA:</h3>
           <div class="social-icons">
-              <a href="#"><i class="fab fa-facebook-f fa-3x"></i></a>
-              <a href="#"><i class="fab fa-instagram fa-3x"></i></a>
-              <a href="#"><i class="fab fa-youtube fa-3x"></i></a>
+              <a href="#"><i class="fab fa-facebook-f fa-1.5x"></i></a>
+              <a href="#"><i class="fab fa-instagram fa-1.5x"></i></a>
+              <a href="#"><i class="fab fa-youtube fa-1.5x"></i></a>
           </div>
         </div>
 
