last changes I hope

--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
             <li class="menu-item">
               <a href="#" class="menu-link is-active">
                 <img src="/components/icones/home.png" alt="Home" class="menu-icon">
-                <span class="menu-name" style="font-size: 1.1rem;">Home</span>
+                <span class="menu-name" style="font-size: 1rem;">Home</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
                 <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
-                <span class="menu-name" style="font-size: 1.1rem;">About US</span>
+                <span class="menu-name" style="font-size: 1rem;">About</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
                 <img src="/components/icones/products.png" alt="ABOUT US" class="menu-icon">
-                <span class="menu-name" style="font-size: 1.1rem;">Products</span>
+                <span class="menu-name" style="font-size: 1rem;">Products</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
                 <img src="/components/icones/location.png" alt="ABOUT US" class="menu-icon">
-                <span class="menu-name" style="font-size: 1.1rem;">Contact</span>
+                <span class="menu-name" style="font-size: 1rem;">Contact</span>
               </a>
             </li>
           </ul>
