--- a/index.html
+++ b/index.html
@@ -167,6 +167,21 @@
 </div>
   
 </section>
+<section>
+  <div class="banner-two-positioning">
+  <div class="banner">
+    <div class="overlay"></div>
+    <div class="content">
+        <h1>VISIT OUR TALLOW LANCASHIRE SHOP</h1>
+        <p>Etiam placerat velit vitae dui blandit sollicitudin. Vestibulum tincidunt sed sit amet volutpat. Nullam egestas sem at mollis sodales.</p>
+        <div class="buttons">
+            <button class="btn secondary">1257 271917</button>
+            <button class="btn primary">Find Us On Map</button>
+        </div>
+    </div>
+</div>
+</div>
+</section>
 
 <section>
   <footer>
