banner and small changes in css

--- a/index.html
+++ b/index.html
@@ -16,35 +16,37 @@
   <header>
     <header class="header" id="header">
       <nav class="navbar container">
+        <div class="navbar-left">
         <ul class="menu-list">
         <div class="logo-black"> <img src="/components/photos/logo-white.png" alt="Logo Black" style="width: 60px; height: auto;"></div>
         <a href="./index.html" class="brand"> TALLOW LANCASHIRE CO</a>
       </ul>
+      </div>
         <div class="menu" id="menu">
           <ul class="menu-list">
 
             <li class="menu-item">
               <a href="#" class="menu-link is-active">
                 <img src="/components/icones/home.png" alt="Home" class="menu-icon">
-                <span class="menu-name" style="font-size: 1rem;">Home</span>
+                <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Home</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
                 <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
-                <span class="menu-name" style="font-size: 1rem;">About</span>
+                <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
                 <img src="/components/icones/products.png" alt="ABOUT US" class="menu-icon">
-                <span class="menu-name" style="font-size: 1rem;">Products</span>
+                <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">
                 <img src="/components/icones/location.png" alt="ABOUT US" class="menu-icon">
-                <span class="menu-name" style="font-size: 1rem;">Contact</span>
+                <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
               </a>
             </li>
           </ul>
@@ -141,7 +143,7 @@
         <div class="bedge-text-right">
           <h4>EXPLORE OUR STORE, FIND THE BEST COOKING TALLOW!</h4>
             <h1>CHECK OUT AVAILABLE PRODUCTS!</h1>
-            <p>The tallow comes from cattle raised on organic farms, where the animals are pasture-raised, fed 100% organic feed (free from synthetic pesticides, herbicides, and GMOs), and not treated with antibiotics or hormones.</p>
+            <p>Pure, nutrient-rich beef tallow, slow-rendered the traditional wet way for superior quality and flavor. Choose from 3 sizes. Perfect for cooking, skincare, and more! Try it today!</p>
             <div class="btn">
               <button class="button-two"><h4>PRODUCTS</h4></button>
             </div>
@@ -155,7 +157,7 @@
         <div class="bedge-text-left">
             <h4>WE ARE OPEN EVERY SINGLE DAY</h4>
             <h1>WE OPEN THE DOORS EVERYDAY AT 9:00. COME SAY HELLO!</h1>
-            <p>Our tallow is a rich source of essential fatty acids, fat-soluble vitamins, and antioxidants that are vital for optimal health.</p>
+            <p>Our friendly team is here to welcome you with a smile every day at 9:00! Whether you're picking up tallow or just stopping by, we’re happy to help, share tips, or chat about our products. Come say hello, we’d love to meet you!</p>
             <div class="btn">
               <button class="button-two"><h4>CONTACT</h4></button>
             </div>
@@ -173,7 +175,7 @@
     <div class="overlay"></div>
     <div class="content">
         <h1>VISIT OUR TALLOW LANCASHIRE SHOP</h1>
-        <p>Etiam placerat velit vitae dui blandit sollicitudin. Vestibulum tincidunt sed sit amet volutpat. Nullam egestas sem at mollis sodales.</p>
+        <p>Pop in daily from 9am to explore our premium wet-rendered tallow. Our friendly team's here to help with cooking tips, or just a chat. See you soon!</p>
         <div class="buttons">
             <button class="btn secondary">1257 271917</button>
             <button class="btn primary">Find Us On Map</button>
