--- a/pages/contact.html
+++ b/pages/contact.html
@@ -57,8 +57,10 @@
             </header>
           </header>
     </section>
+
     <!-- google map and opening hours -->
 <section>
+
 
     <div class="contact-info">
 
@@ -125,6 +127,54 @@
       </div>
     </form><!-- // End form -->
   </div><!-- // End #container -->
+</section>
+<section>
+  <footer>
+    <div class="footer-container">
+        <div class="footer-section">
+            <h3>OPENING HOURS</h3>
+            <p><span>MONDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>TUESDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>WEDNESDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>THURSDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>FRIDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>SATURDAY</span> <span>9:00 - 19:00</span></p>
+            <p><span>SUNDAY</span> <span>10:00 - 16:00</span></p>
+        </div>
+
+
+
+        <div class="footer-section">
+            <h3>MENU</h3>
+            <p><a href="#">HOME</a></p>
+            <p><a href="#">ABOUT US</a></p>
+            <p><a href="#">PRODUCTS</a></p>
+            <p><a href="#">CONTACT</a></p>
+            <br>
+            <h3>ON SOCIAL MEDIA:</h3>
+          <div class="social-icons">
+              <a href="#"><i class="fab fa-facebook-f fa-1.5x"></i></a>
+              <a href="#"><i class="fab fa-instagram fa-1.5x"></i></a>
+              <a href="#"><i class="fab fa-youtube fa-1.5x"></i></a>
+          </div>
+        </div>
+
+        <div class="footer-section">
+            <h3>CONTACT US</h3>
+            <p><strong>PHONE:</strong> 01257 271917</p>
+            <p><strong>E-MAIL:</strong> <a href="mailto:tallowlancashire">tallow@gmail.com</a></p>
+            <br>
+            <h3>LOCATION</h3>
+            <p> 275 Eaves Ln<br> Chorley PR6 0EY</p>
+
+
+            </div>
+          </div>         
+    </div>
+    <div class="footer-bottom">
+        <p>© 2025 Tallow Lancashire Co</p>
+    </div>
+</footer>
 </section>
 
 </body>
