--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/pages/navbar.css">
     <link rel="stylesheet" href="/pages/fonts.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="/pages/buttons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/pages/contact.css">
@@ -59,28 +59,35 @@
     </section>
 
     <!-- google map and opening hours -->
-<section>
-
-
-    <div class="contact-info">
-
-        <!-- GOOGLE MAP -->
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2364.3408116934147!2d-2.62179632324921!3d53.658725072381515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487b0c668ea8d25b%3A0xb58046f2b8fac4a4!2sMonkey%20Mist!5e0!3m2!1spl!2suk!4v1742842894815!5m2!1spl!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        
-        <h2>Opening Hours</h2>
-        <ul>
-            <li>Monday: 9am - 5pm</li>
-            <li>Tuesday: 9am - 5pm</li>
-            <li>Wednesday: 9am - 5pm</li>
-            <li>Thursday: 9am - 5pm</li>
-            <li>Friday: 9am - 5pm</li>
-            <li>Saturday: 9am - 5pm</li>
-            <li>Sunday: 9am - 5pm</li>
-        </ul>
-
-    </div>
-
-</section>
+    <section class="contact-info">
+      <div class="contact-container">
+        <div class="contact-title">
+          <h1>Visit us in-store or reach out online!</h1>
+        </div>
+        <div class="contact-items">
+          <div class="contact-map"> 
+            <!-- GOOGLE MAP -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2364.3408116934147!2d-2.62179632324921!3d53.658725072381515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487b0c668ea8d25b%3A0xb58046f2b8fac4a4!2sMonkey%20Mist!5e0!3m2!1spl!2suk!4v1742842894815!5m2!1spl!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+          <div class="contact-info-add"> 
+            
+            <h2>OPENING HOURS</h2>
+            <ul>
+              <li><p>MONDAY: 9am - 5pm</p></li>
+              <li><p>TUESDAY: 9am - 5pm</p></li>
+              <li><p>WEDNESDAY: 9am - 5pm</p></li>
+              <li><p>THURSDAY: 9am - 5pm</p></li>
+              <li><p>FRIDAY: 9am - 5pm</p></li>
+              <li><p>SATURDAY: 9am - 5pm</p></li>
+              <li><p>SUNDAY: 10am - 16pm</p></li>
+            </ul>
+            <br>
+            <h2>OUR ADDRESS</h2>
+            <p>275 Eaves Ln, Chorley PR6 0EY</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 <!-- CONTACT FORM -->
