--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </a>
             </li>
             <li class="menu-item">
-              <a href="#" class="menu-link">
+              <a href="/pages/contact.html" class="menu-link">
                 <img src="/components/icones/location.png" alt="ABOUT US" class="menu-icon">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
               </a>
@@ -203,10 +203,10 @@
 
         <div class="footer-section">
             <h3>MENU</h3>
-            <p><a href="#">HOME</a></p>
+            <p><a href="/index.html">HOME</a></p>
             <p><a href="#">ABOUT US</a></p>
             <p><a href="#">PRODUCTS</a></p>
-            <p><a href="#">CONTACT</a></p>
+            <p><a href="/pages/contact.html">CONTACT</a></p>
             <br>
             <h3>ON SOCIAL MEDIA:</h3>
           <div class="social-icons">
