--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <h1>VISIT OUR TALLOW LANCASHIRE SHOP</h1>
         <p>Pop in daily from 9am to explore our premium wet-rendered tallow. Our friendly team's here to help with cooking tips, or just a chat. See you soon!</p>
         <div class="buttons">
-            <button class="btn secondary">1257 271917</button>
+            <button class="btn primary">01257 271917</button>
             <button class="btn primary">Find Us On Map</button>
         </div>
     </div>
