--- a/pages/about.html
+++ b/pages/about.html
@@ -5,10 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/pages/about.css">
+    <link rel="stylesheet" href="/pages/navbar.css">
+    <link rel="stylesheet" href="/pages/fonts.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="/pages/buttons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 
 <body>
+  <header>
+    <header class="header" id="header">
+      <nav class="navbar container">
+        <div class="navbar-left">
+        <ul class="menu-list">
+        <div class="logo-black"> <img src="/components/photos/logo-white.png" alt="Logo Black" style="width: 60px; height: auto;"></div>
+        <a href="./index.html" class="brand"> TALLOW LANCASHIRE CO</a>
+      </ul>
+      </div>
+        <div class="menu" id="menu">
+          <ul class="menu-list">
+
+            <li class="menu-item">
+              <a href="#" class="menu-link is-active">
+                <img src="/components/icones/home.png" alt="Home" class="menu-icon">
+                <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Home</span>
+              </a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">
+                <img src="/components/icones/about.png" alt="ABOUT US" class="menu-icon">
+                <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
+              </a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">
+                <img src="/components/icones/products.png" alt="ABOUT US" class="menu-icon">
+                <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
+              </a>
+            </li>
+            <li class="menu-item">
+              <a href="/pages/contact.html" class="menu-link">
+                <img src="/components/icones/location.png" alt="ABOUT US" class="menu-icon">
+                <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  </header>
+
   <section> 
     <section class="timeline">
         <div class="container left-container">
